src/test/deca/context/valid/cast-float-int.deca
// Description:
//    cast float to int
//
// Resultats:
//    
//
// Historique:
//    cree le 19/01/2023

{
    (int)(2.0);
}