src/test/deca/context/invalid/assign-auto-ref.deca
// Description:
//    Créé une variable et s'auto assigne
//
// Resultats:
//    Erreur contextuelle
//    Ligne 12 : The identifier "i" doesn't exist (rule 0.1)
//
// Historique:
//    cree le 17/01/2023

{
    int i = i;
}